--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.59.2",
+    "@nivo/line": "^0.59.3",
+    "@nivo/pie": "^0.59.1",
     "react": "^16.11.0",
+    "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
