--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-color": "^2.17.3",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-router-last-location": "^2.0.1",
     "react-scripts": "3.2.0",
     "reactstrap": "^8.1.1"
   },
